# Top-AMS

./: .gitignore
.devcontainer/: Dockerfile
.github/workflows/: release.yml
doc/: A1mini启动_原版.gcode  A1mini快速启动.gcode  A1mini换料.gcode  A1mini换料_topams版本.gcode  A1mini换料_原版.gcode  A1mini换料_增强版.gcode  print.json  print1.json  代码优化说明.md  编译教程.md
main/: CMakeLists.txt  config.hpp  convert_html_to_hpp.py  espMQTT.hpp  index.html  main.cpp  tools.hpp  web_sync.hpp
